# jarvis

./: .dockerignore  .env.example  .env.polling.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml  railway.api.toml  railway.worker.toml
alembic/: env.py
app/: __init__.py  main.py
docs/: ARCHITECTURE.md  HOTFIX_ACCESS_GROUP_ROUTING_REPORT.md  HOTFIX_ACCESS_SETTINGS_ADD_STATUS_REPORT.md  HOTFIX_ACCESS_SETTINGS_FSM_INPUT_REPORT.md  HOTFIX_HELPDESK_IMAP_BASELINE_REPORT.md  HOTFIX_HOUSEHOLD_MEMORY_DELETE_UX_REPORT.md  HOTFIX_LOGGING_HYGIENE_REPORT.md  HOTFIX_PROMPT_PROFILES_RAW_EDITOR_REPORT.md  HOTFIX_REDACT_EXCEPTION_TRACEBACKS_REPORT.md  HOTFIX_SHOPPING_BUY_COLON_INTENT_REPORT.md  HOTFIX_SHOPPING_PARSER_SANITIZE_REPORT.md  HOTFIX_TELEGRAM_DUPLICATE_REPLIES_REPORT.md  HOTFIX_TELEGRAM_WEBHOOK_SILENT_AFTER_4F0_REPORT.md  HOTFIX_WEBHOOK_SELF_HEALING_REPORT.md  HOTFIX_WEB_SEARCH_FOLLOWUP_FORMATTING_REPORT.md  RAILWAY_DEPLOY.md  STAGE_1A_2A_EVENT_CARDS_FOUNDATION_REPORT.md  STAGE_1R_ADMIN_ID_AND_OPENROUTER_REPORT.md  STAGE_1R_ENV_BOOTSTRAP.md  STAGE_1R_ENV_BOOTSTRAP_REPORT.md  STAGE_1R_FINAL_LIVE_TELEGRAM_REPORT.md  STAGE_1R_LIVE_TELEGRAM_SMOKE_REPORT.md  STAGE_1R_TUNNEL_SETUP.md  STAGE_1_REPORT.md  STAGE_2R_GUEST_MODE_POLLING_SMOKE.md  STAGE_2R_GUEST_MODE_REAL_POLLING_REPORT.md  STAGE_2_GUEST_MODE_PLAN.md  STAGE_2_GUEST_MODE_REAL_SMOKE.md  STAGE_2_GUEST_MODE_REPORT.md  STAGE_3A_BUSINESS_MODE_FOUNDATION_REPORT.md  STAGE_3A_BUSINESS_MODE_REAL_SMOKE.md  STAGE_3A_R_GROUP_ROUTING_CHECKLIST.md  (+28 more)
(+260 files in other folders)
