[project]
name = "jarvis"
version = "0.1.0"
description = "Telegram AI bot Jarvis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.27.0,<4.0.0",
  "alembic>=1.16.0,<2.0.0",
  "arq>=0.26.0,<1.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "python-json-logger>=3.3.0,<4.0.0",
  "redis>=5.2.0,<6.0.0",
  "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.16.0,<2.0.0",
  "pytest>=8.4.0,<9.0.0",
  "pytest-asyncio>=1.0.0,<2.0.0",
  "ruff>=0.12.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "T20"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = false
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = ["aiogram.*", "arq.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
